--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     {% block head %}
-    <title>Image Demo</title>
+    <title>ClockThree Demo</title>
 
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
 
