more bootstrap fun

--- a/web/templates/clock.html
+++ b/web/templates/clock.html
@@ -14,6 +14,9 @@
             {# note the use of the |safe filter to disable autoescaping within the script block #}
             background: url('{{url_for('clockfaceimg',style=style,font=fontname)|safe}}') no-repeat 0 0;
             overflow: hidden;
+            display: block;
+            margin-left: auto;
+            margin-right: auto;
         }
 
         .lit
@@ -76,38 +79,38 @@
 
 {% block content %}
 <div class="jumbotron">
-    <div class="container">
-        <div class="content">
+    <div class="container" style="text-align: center">
+        <div class="content" >
             {% for c in cells %}
-                <div id="{{c.id}}" title="{{c.title}}" class="lit" style="left: {{c.left}}px; top: {{c.top}}px; background-position: -{{c.left}}px -{{c.top}}px; height:{{c.height}}px; width:{{c.width}}px"></div>
+            <div id="{{c.id}}" title="{{c.title}}" class="lit" style="left: {{c.left}}px; top: {{c.top}}px; background-position: -{{c.left}}px -{{c.top}}px; height:{{c.height}}px; width:{{c.width}}px"></div>
             {% endfor %}
+            <!-- Button trigger modal -->
+        </div>
+        <button class="btn btn-default btn-lg" data-toggle="modal" data-target="#myModal" style="margin-top: 10px">
+            Customize this clock
+        </button>
+    </div>
+</div>
+
+
+    <!-- Modal -->
+    <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+                    <h4 class="modal-title" id="myModalLabel">Settings</h4>
+                </div>
+                <div class="modal-body">
+                    ...
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-primary">Save changes</button>
+                </div>
+            </div>
         </div>
     </div>
 
-    <!-- Button trigger modal -->
-    <button class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
-    Launch demo modal
-    </button>
-
-   <!-- Modal -->
-<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-        <h4 class="modal-title" id="myModalLabel">Modal title</h4>
-      </div>
-      <div class="modal-body">
-        ...
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
-      </div>
-    </div>
-  </div>
-</div>
-
-</div>
 {% endblock %}
 
