--- a/web/templates/clock.html
+++ b/web/templates/clock.html
@@ -1,10 +1,8 @@
-﻿{# {% extends "base.html" %} #}
-{% extends "bootstrap/base.html" %}
+﻿{% extends "bootstrap/base.html" %}
 
 {% block styles %}
     {{ super() }}
 
-    <a href="{{url_for('clockfaceimg',style=style,fg='#FFFBD9',font=fontname)}}"></a>
     <style type='text/css'>
         .content
         {
@@ -12,7 +10,7 @@
             width:  910px;
             height: 910px;
             {# note the use of the |safe filter to disable autoescaping within the script block #}
-            background: url('{{url_for('clockfaceimg',style=style,font=fontname)|safe}}') no-repeat 0 0;
+            background: url('{{url_for('clockfaceimg',style=style,font=fontname,fontsize=fontsize)|safe}}') no-repeat 0 0;
             overflow: hidden;
             display: block;
             margin-left: auto;
@@ -23,7 +21,7 @@
         {
             position: absolute;
             {# note the use of the |safe filter to disable autoescaping within the script block #}
-            background-image: url("{{url_for('clockfaceimg',style=style,fg='#FFFBD9',font=fontname)|safe}}");
+            background-image: url("{{url_for('clockfaceimg',style=style,fg='#FFFBD9',font=fontname,fontsize=fontsize)|safe}}");
             background-repeat: no-repeat;
         }
     </style>
@@ -78,19 +76,20 @@
 {% endblock %}
 
 {% block content %}
-<div class="jumbotron">
-    <div class="container" style="text-align: center">
-        <div class="content" >
-            {% for c in cells %}
-            <div id="{{c.id}}" title="{{c.title}}" class="lit" style="left: {{c.left}}px; top: {{c.top}}px; background-position: -{{c.left}}px -{{c.top}}px; height:{{c.height}}px; width:{{c.width}}px"></div>
-            {% endfor %}
+    <div class="jumbotron">
+        <div class="container" style="text-align: center">
+            <div class="content" >
+                {% for c in cells %}
+                <div id="{{c.id}}" title="{{c.title}}" class="lit" style="left: {{c.left}}px; top: {{c.top}}px; background-position: -{{c.left}}px -{{c.top}}px; height:{{c.height}}px; width:{{c.width}}px"></div>
+                {% endfor %}
+            </div>
+
             <!-- Button trigger modal -->
+            <button class="btn btn-default btn-lg" data-toggle="modal" data-target="#myModal" style="margin-top: 10px">
+                Customize this clock
+            </button>
         </div>
-        <button class="btn btn-default btn-lg" data-toggle="modal" data-target="#myModal" style="margin-top: 10px">
-            Customize this clock
-        </button>
     </div>
-</div>
 
 
     <!-- Modal -->
