--- a/web/templates/clock.html
+++ b/web/templates/clock.html
@@ -110,6 +110,21 @@
                                             time5 = (time5+1) % 288
                                             lightsentence(time5);
                                           });
+
+                    // change the font
+                    $( "#fontlarge" ).click(function() {
+                        updatecellcontents(style,fontname,40);
+                    });
+                    $( "#fontreg" ).click(function() {
+                        updatecellcontents(style,fontname,30);
+                    });
+                    $( "#fontsmall" ).click(function() {
+                        updatecellcontents(style,fontname,25);
+                    });
+                    $( "#fonttiny" ).click(function() {
+                        updatecellcontents(style,fontname,20);
+                    });
+
             });
         });//]]>  
     </script>
@@ -136,9 +151,18 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-                    <h4 class="modal-title" id="myModalLabel">Settings</h4>
+                    <h4 class="modal-title" id="myModalLabel">Customize Settings</h4>
                 </div>
                 <div class="modal-body">
+
+                    <div class="btn-toolbar" role="toolbar">
+                      <button id="fontlarge" type="button" class="btn btn-default btn-lg"> <span class="glyphicon glyphicon-font"></span> Large</button>
+                      <button id="fontreg" type="button" class="btn btn-default">        <span class="glyphicon glyphicon-font"></span> Regular</button>
+                      <button id="fontsmall" type="button" class="btn btn-default btn-sm"> <span class="glyphicon glyphicon-font"></span> Small</button>
+                      <button id="fonttiny" type="button" class="btn btn-default btn-xs"> <span class="glyphicon glyphicon-font"></span> Tiny</button>
+                    </div>
+
+
                     ...
                 </div>
                 <div class="modal-footer">
